<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">咪哟</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="find_music">发现音乐</string>
    <string name="my_fm">我的FM</string>
    <string name="weather_cloudy">多云</string>
    <string name="rock_music">摇滚ROCK</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>

    <string name="chl">频道</string>
    <string name="mm">心情</string>
    <string name="ms">场景</string>
    <string name="no_music">该纬度暂无音乐数据</string>
    <string name="cancel">取消</string>
    <string name="qq_login">ＱＱ登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="douban_login">豆瓣登录</string>
    <string name="my_Heart">我的红心</string>
    <string name="auto_recommend">推荐偏好</string>
    <string name="qq_share">QQ好友</string>
    <string name="weixin_share">微信好友</string>
    <string name="friends_share">微信朋友圈</string>
    <string name="qqzone_share">QQ空间</string>
    <string name="weibo_share">新浪微博</string>
    <string name="share_to">分享到</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_deny">发送被拒绝</string>
    <string name="share_unknown">发送返回</string>
    <string name="weibo_not_support_api">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="message">消息</string>
    <string name="tucao">吐槽</string>
    <string name="score">评分</string>
    <string name="check_fro_update">版本更新</string>
    <string name="about">关于咪哟</string>


    <!-- 分享 -->
    <string name="weibo_share_music_template">分享一首[%1$s]单曲，&lt;%2$s&gt;（来自@%3$s）（#听对的音乐遇见对的人#）试听下载地址</string>
    <string name="share_weixin">分享微信</string>
    <string name="two_dimension_code">二维码</string>
    <string name="question">常见问题</string>
    <string name="company_copyright">Copyright 2013-2015 Miglab Team 版权所有</string>
    <string name="send">发送</string>
    <string name="app_intro">人海中找品味相同的知己，只有回眸，不在擦肩而过！</string>
</resources>
