<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_theme"
              android:fitsSystemWindows="true">
    <include layout="@layout/ly_common_title"/>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bg_color">
        <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                android:src="@drawable/logo_about"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_above="@+id/copyright"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true">
            <TextView
                    style="@style/about_text_style"
                    android:text="@string/share_weixin"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                    android:src="@drawable/point"/>
            <TextView
                    style="@style/about_text_style"
                    android:text="@string/two_dimension_code"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/point"/>
            <TextView
                    style="@style/about_text_style"
                    android:text="@string/question"/>
        </LinearLayout>
        <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/grey_b7"
                android:layout_marginBottom="30dp"
                android:text="@string/company_copyright"
                />
    </RelativeLayout>
</LinearLayout>