<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:background="@drawable/view_bg">
    <LinearLayout
            android:id="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_cd"
                android:scaleType="centerInside"/>

        <LinearLayout
                style="@style/login_btn_style"
                android:background="@drawable/login_btn1">
            <TextView
                    android:id="@+id/qqLogin"
                    style="@style/login_text_style"
                    android:text="@string/qq_login"
                    android:drawableLeft="@drawable/qq_ico"/>
        </LinearLayout>
        <LinearLayout
                style="@style/login_btn_style"
                android:background="@drawable/login_btn1">
            <TextView
                    android:id="@+id/weiboLogin"
                    style="@style/login_text_style"
                    android:text="@string/weibo_login"
                    android:drawableLeft="@drawable/weibo_ico"/>

        </LinearLayout>
        <LinearLayout
                style="@style/login_btn_style"
                android:background="@drawable/login_btn1">
            <TextView
                    android:id="@+id/doubanLogin"
                    style="@style/login_text_style"
                    android:text="@string/douban_login"
                    android:drawableLeft="@drawable/douban_ico"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>