<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res/com.miglab.miyo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_bg">
    <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weather_top_margin"
            android:layout_marginRight="@dimen/weather_right_margin"
            android:textSize="@dimen/weather_text_size"
            android:text="@string/weather_cloudy"
            android:layout_alignParentRight="true"/>
    <TextView
            android:id="@+id/music_type"
            android:layout_below="@id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/music_type_margin"
            android:textSize="@dimen/music_type_size"
            android:layout_centerHorizontal="true"
            android:text="@string/rock_music"/>
    <RelativeLayout
            android:id="@+id/music_player"
            android:layout_below="@id/music_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        <com.miglab.miyo.ui.widget.RoundImageView
                android:id="@+id/music_cd"
                android:layout_width="@dimen/music_cd_diameter"
                android:layout_height="@dimen/music_cd_diameter"
                android:layout_centerInParent="true"
                android:src="@drawable/loading"/>

        <com.miglab.miyo.ui.widget.RoundProgressBar
                android:id="@+id/cd_progress"
                android:layout_width="@dimen/cd_progress_diameter"
                android:layout_height="@dimen/cd_progress_diameter"
                app:roundWidth="@dimen/progress_width"
                app:roundColor="@color/cd_progress_bg"
                app:roundProgressColor="@color/cd_progress"
                app:style="STROKE"/>
            <ImageView
                    android:id="@+id/cd_palyer"
                    android:layout_width="@dimen/music_cd_diameter"
                    android:layout_height="@dimen/music_cd_diameter"
                    android:background="@drawable/cd_selector"
                    android:layout_centerInParent="true"
                    />
    </RelativeLayout>
    <TextView
            android:id="@+id/music_name"
            android:layout_below="@id/music_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/weather_text_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/music_name_top_margin"
            android:layout_marginBottom="@dimen/music_name_bottom_margin"
            android:text="@string/hello_world"/>
    
    <TextView
            android:layout_below="@id/music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/chat_text_size"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:layout_marginRight="@dimen/chat_left_margin"
            android:layout_marginLeft="@dimen/chat_left_margin"
            android:text="最是那一低头的温柔，恰是一朵水莲花，不胜凉风的娇羞..."/>
</RelativeLayout>